assets/stylesheet/style.css
body{
    box-sizing: border-box;
    background-color: #f4f5f6;
}

/*header styling*/
.h{
    background: #f72210;
    max-width: 1280px;
    height: 100px;
    color: #fff;
}

.header{
    height: 100%;
}

.header .date{
    align-self: end;
    font-size: 15px;
    font-family: sans-serif;
}

.header h1{
    font-size: 70px;
    align-self: end;
    font-weight: bolder;
    text-align: center;
}

.container .header ul{
    list-style: none;
    margin: 0;
    position: relative;
    height: 100%;
    align-items: flex-end;
}

.container .header ul li{
    margin-right: 10px;
}

.container .header ul button{
    color: red;
    font-weight: bold;
    font-family: sans-serif;
    border-radius: 0;
    height: 35px;
    text-align:center;
    padding-top: 5px;
    margin-bottom: 12px;
}

.container .header ul .sign-in{
    font-family: sans-serif;
    font-size: 15px;
    font-weight: bold;
}

.container .header ul button:hover,
.container .header ul .sign-in:hover,
.header h1{
    cursor: pointer;
}

.container header ul .menu{
    display: none;
}

@media only screen and (max-width: 1000px){
    .container{
        height: 50px;
    }

    .container header{
        flex-wrap: nowrap;
    }

    .container header .date{
        display: none;
    }

    .container header h1{
        justify-self: left;
        font-size: 30px;
    }
    
    .container header ul .btn{
        margin-bottom: 8px;
    }

    .container header ul .menu{
        display: inline;
        font-size: 25px;
        align-self: center;
        cursor: pointer;
    }
}

@media only screen and (max-width: 480px){
    .container{
        height: 40px;
    }
    .container header,
    .container header ul{
        flex-wrap: nowrap;
    }

    .container .header ul{
        top: 6px;
        margin-right: -15px;
    }

    .container header h1{
        font-size: 20px;
    }
    
    .container header ul .btn{
        font-size: 14px;
        height: 30px;
        margin-bottom: 12px;
    }
    
    .container header ul .menu{
        margin-bottom: 10px;
    }
}

/*navigation styling*/
.nav{
    max-width: 1280px;
    color: black;
    background: #fff;
    border-bottom:1px solid #d9d9d9;
    margin-top: -8px;
}

.nav ul{
    list-style: none;
    text-transform: capitalize;
    font-weight: bold;
    flex-grow: 1;
    text-align: center;
    font-size: 21px;
    line-height: 24px;
    padding-top: 10px;
    margin: 8px auto;
    font-family: Arial, Helvetica, sans-serif;
}

.nav ul li{
    border-right: 1px solid #d9d9d9;
    padding-right: 12px;
}

.nav ul .search{
    border-right: none;
}

.nav ul li:hover{
    color: red;
    cursor: pointer;
}

.nav ul li input{
    border: none;
    width: 80px;
}

/*featured stories styling*/
.container-fluid{
    padding: 0;
    max-width: 1280px;
    background-color: white;
}
.container-fluid .news-main{
    margin: 0 0 0 20px;
}

.container-fluid .news-main section{
    padding: 0;
}

.container-fluid .news-main section .featured-story .img-wrapper img{
    width: 100%;
    background-repeat: no-repeat;
}

.news-main section{
    margin: 15px 0 0 10px;
}

.news-main section h5{
    text-transform: uppercase;
    font-size: 15px;
    color: #a0a0a0;
    font-weight: 600;
    font-family: Arial, Helvetica, sans-serif;
}

.news-main section .featured-story .img-wrapper{
    position: relative;
}

.news-main section .featured-story .img-wrapper .category a{
    position: absolute;
    background: rgba(255, 255, 255, 0.8);
    bottom: 0;
    padding: 0 5px;
    color: red;
    font-size: 17px;
    text-transform: uppercase;
    font-weight: 600;
    text-decoration: none;
}

.news-main section .featured-story h3 a{
    text-transform: capitalize;
    font-size: 22px;
    color: black;
    font-weight: 600;
    text-decoration-color: red;
    line-height: 10px;
    width: 100%;
}

.news-main section .featured-story h3{
    line-height: 0.9em;
}

.news-main section .featured-story p{
    color: #463939;
    font-size: 15px;
    width: 100%;
    line-height: 1.2em;
}

.news-main section .featured-story .img-wrapper .category a:hover,
.news-main section .featured-story h3 a:hover{
    cursor: pointer;
}

.container-fluid top-story section{
    border: 1px solid black;
}

/*top stories*/
/*culture and travel*/
.top-story{
    padding: 0;
}
.top-story .culture-travel{
    margin-top: 15px;
    background: #e3e4e6;
    width: 100%;
    margin-left: 0;
}

.culture-travel h5{
    padding: 10px;
}

.culture-travel .content img{
    width: 100%;
}

.culture-travel .content h4{
    font-size: 18px;
    font-family: Arial, Helvetica, sans-serif;
    font-weight: 600;
    color: black;
    margin-top: 8px;
    padding: 0 5px;
    cursor: pointer;
}

.culture-travel .content p{
    font-size: 15px;
    font-family: Arial, Helvetica, sans-serif;
    color: #a0a0a0;
    padding: 0 5px;
}

.culture-travel .content .tag{
    background-color: #97c6ce;
    font-size: 15px;
    padding: 0 5px;
    margin: 0 5px;
    position: relative;
    bottom: 15px;
}

.culture-travel .content .tag:hover{
    background-color: rgb(50, 50, 78);
    color: #97c6ce;
    cursor: pointer;
}

/*more-stories*/
.more-stories .item{
    padding-top: 15px;
    display: grid;
    grid-template-columns: 135px 1fr;
    grid-gap: 15px;
    border-top: 1px solid #ddd;
}

.more-stories .item img{
    width: 100%;
}

.more-stories .item div h4{
    font-weight: bold;
    font-size: 16px;
    color: black;
}

.more-stories .item div h4:hover{
    text-decoration: underline;
    text-decoration-color: red;
    cursor: pointer;
}

.more-stories .item div p{
    font-size: 15px;
}

/*opinion section*/
.opinion-news{
    padding: 0;
    max-width: 385px;
}
.opinion-news .opinion{
    margin: 0;
    padding-left: 0;
}

.opinion-item{
    display: grid;
    grid-template-columns: 63px 1fr;
    grid-gap: 15px;
    padding: 10px 0;
    border-top: 1px solid #ddd;
} 

.opinion-first{
    border-top: none;
    padding-top: 0;
}

.opinion-item img{
    width: 100%;
    cursor: pointer;
}

.opinion-item div h6{
    text-transform: capitalize;
    font-weight: bold;
    font-size: 15px;
    color: black;
}

.opinion-item div h6:hover{
    color:red;
    cursor: pointer;
}

.opinion-item div p{
    text-transform: uppercase;
    font-size: 14px;
    color: grey;
    font-weight: 600;
    font-family: Arial, Helvetica, sans-serif;
    line-height: 8px;
}

/*latest news*/
.opinion-news .latest-news{
    margin-top: 35px;
}

.latest-news .latest-news-item{
    display: grid;
    grid-template-columns: 135px 1fr;
    grid-gap: 15px;
    margin-bottom: 10px;
    border-bottom: 1px solid #d9d9d9;
    padding-bottom: 10px; 
}

.latest-news-item img{
    width: 100%;
    cursor: pointer;
}

.latest-news-item div h6{
    font-weight: bold;
    color: black;
    font-family: Arial, Helvetica, sans-serif;
}

.latest-news-item div h6:hover{
    color: red;
    cursor: pointer;
}

.opinion-news .latest-news .news-last{
    border-bottom: none;
}

@media only screen and (max-width: 768px){
    .latest-news-item{
        grid-template-columns: 268px 1fr;
    }

    .opinion-news{
        max-width: 100%;
    }
}

/*MAGAZINE*/
/*magazine cover*/
.magazine-cover{
    margin-top: 50px;
    margin-left: 15px;
}

.magazine-cover .img-wrapper img{
    position: relative;
    width: 100%;
    cursor: pointer;
}

.magazine-cover .img-wrapper .category{
    position: absolute;
    bottom: 34px;
    color: red;
    background: rgba(255, 255, 255, 0.7);
    font-weight: bold;
    padding: 3px;
    font-size: 15px;
    cursor: pointer;
}

.magazine-cover span{
    display: inline-block;
    text-align: center;
    width: 100%;
    padding: 5px 0;
    color: black;
    font-weight: bold;
    background: #e6e1e1;
    cursor: pointer;
}

.magazine-cover span:hover{
    background: #a0a0a0;
}

